--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <audio id="background-music" loop>
     <source src="/source/music/lala.mp3" type="audio/mpeg">
   </audio>
-  
-  <button onclick="document.getElementById('background-music').play()">Jouer la Musique</button>
+  <!-- Boutons de contrôle de la musique -->
+  <div>
+    <button onclick="document.getElementById('background-music').play()">▶️ Jouer la musique</button>
+    <button onclick="document.getElementById('background-music').pause()">⏸️ Pause</button>
+  </div>
 
   <div class="container">
     <div class="image-container">
@@ -23,10 +26,10 @@
     <h1>Le meilleur Réparateur d’Arc-en-Ciel</h1>
     
     <div class="info">
-      <p><span class="infotexte">Nom :</span> Cielclair</p>
-      <p><span class="infotexte">Profession :</span> Réparateur d’Arc-en-Ciel <strong>Certifié</strong></p>
-      <p><span class="infotexte">Adresse :</span> Au bout, tournez à droite, puis à gauche, encore à droite, ensuite à gauche. Continuez tout droit vers le nuage moelleux, à droite, puis à gauche encore ! Facile comme un jeu d’enfants, vous allez me trouver là-bas sans problème !.</p>
-      <p><span class="infotexte">Contact :</span> Attrape un arc-en-ciel, murmure mon nom trois fois</p>
+      <p><span class="info-texte">Nom :</span> Cielclair</p>
+      <p><span class="info-texte">Profession :</span> Réparateur d’Arc-en-Ciel <strong>Certifié</strong></p>
+      <p><span class="info-texte">Adresse :</span> Au bout de la Voie Lactée, juste après la Grande Ourse</p>
+      <p><span class="info-texte">Contact :</span> Attrape un arc-en-ciel, murmure mon nom trois fois</p>
     </div>
     
     <div class="section">
