--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <!-- Musique de fond -->
-  <audio id="background-music" loop>
-    <source src="/source/music/lala.mp3" type="audio/mpeg">
+  <audio id="background-music">
+    <source src="/assets/music/lala.mp3" type="audio/mpeg">
   </audio>
   <!-- Boutons de contrôle de la musique -->
   <div>
@@ -20,7 +20,7 @@
 
   <div class="container">
     <div class="image-container">
-      <img src="/source/img/arc.png" alt="Réparateur d'arc-en-ciel">
+      <img src="/assets/img/arc.png" alt="Réparateur d'arc-en-ciel">
     </div>
 
     <h1>Le meilleur Réparateur d’Arc-en-Ciel</h1>
